new post and design

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -34,6 +34,7 @@
 @import "minimal-mistakes/utilities";
 
 /* Layout specific */
+@import "minimal-mistakes/tiles";
 @import "minimal-mistakes/page";
 @import "minimal-mistakes/archive";
 @import "minimal-mistakes/sidebar";
