--- a/_sass/minimal-mistakes/_tiles.scss
+++ b/_sass/minimal-mistakes/_tiles.scss
@@ -8,7 +8,7 @@
   @include media($micro) {
     @include fill-parent;
   }
-  @include media(new-breakpoint(min-width em(480) 12)) {
+  @include media($small) {
     @include span-columns(3);
     @include omega(4n);
   }
