new post and design

--- a/_sass/minimal-mistakes/_grid-settings.scss
+++ b/_sass/minimal-mistakes/_grid-settings.scss
@@ -2,6 +2,7 @@
    Grid settings for Neat
    ========================================================================== */
 
+@import "vendor/neat/neat";
 @import "vendor/neat/neat-helpers";
 
 // Change the grid settings
