--- a/_sass/minimal-mistakes/_tiles.scss
+++ b/_sass/minimal-mistakes/_tiles.scss
@@ -11,6 +11,7 @@
   @include media(new-breakpoint(min-width em(480) 12)) {
     @include span-columns(6);
     @include omega(2n);
+    clear: none;
   }
   .entry-date {
     @include font-size(16,no);
