social and spotify

--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -224,6 +224,12 @@ body:hover .visually-hidden button {
     color: $github-color;
   }
 
+  .fa-spotify {
+    color: #1db954;
+  }
+
+
+
   .fa-google-plus,
   .fa-google-plus-square,
   .fa-google-plus-g {
