--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -1,7 +1,11 @@
-<!--
   <li>
-    <a href="http://link-to-whatever-social-network.com/user/" itemprop="sameAs">
-      <i class="fas fa-fw" aria-hidden="true"></i> Custom Social Profile Link
+    <a href="https://scholar.google.se/citations?user={{ author.googlescholar }}"  itemprop="sameAs">
+      <i class="fab fa-fw fas fa-graduation-cap"></i> Google Scholar
     </a>
   </li>
--->
+
+  <li>
+    <a href="https://open.spotify.com/user/{{ author.spotify }}" itemprop="sameAs">
+      <i class="fab fa-spotify" aria-hidden="true"></i> Spotify
+    </a>
+  </li>
